# sentinel-guard

./: .gitignore  CONTRIBUTING.md  DEMO_COMMANDS.md  DEMO_GUIDE.md  FORMAL_SKETCH.md  LICENSE  README.md  SECURITY.md  demo.py  policy.yaml  pyproject.toml
.claude/: settings.example.json
.github/workflows/: test.yml
examples/: README.md
examples/claude_code/: pretooluse_bash_destructive.json  pretooluse_bash_safe.json  pretooluse_read_secret.json  pretooluse_webfetch_private.json  pretooluse_write_auth_file.json
examples/policies/: coding_agent_balanced.yaml  coding_agent_strict.yaml  research_agent.yaml
examples/traces/: benign_summary.json  destructive_without_confirmation.json  injection_tool_call.json  least_privilege_violation.json  public_send_with_confirmation.json
sentinel/: __init__.py  __main__.py  agent.py  audit.py  cli.py  demo_runner.py  eval.py  firewall.py  monitor.py  policy.py  policy_diff.py  policy_synthesizer.py  provenance.py  risk_scan.py  tools.py  types.py  ui.py
sentinel/integrations/: __init__.py  claude_code_hook.py  claude_code_installer.py
tests/: test_claude_code_hook.py  test_claude_code_installer.py  test_cli.py  test_eval_report.py  test_monitor.py  test_policy_diff.py  test_policy_synthesizer.py  test_provenance.py  test_risk_scan.py  test_temporal_rules.py  test_ui.py
